<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/toolbar_layout"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="80dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/splash"
                    android:layout_gravity="center">
                </ImageView>


                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintemail"
                    android:textColorHint="@color/colorDarkAsh"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorBlack"
                    app:backgroundTint="@color/colorPrimary"
                    android:maxLines="1"
                    android:maxLength="40"
                    android:inputType="text">

                </EditText>


                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintpassword"
                    android:textColorHint="@color/colorDarkAsh"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorBlack"
                    app:backgroundTint="@color/colorPrimary"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:inputType="textPassword">

                </EditText>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundbutton"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp">

                </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textAlignment="textEnd"
                    android:text="@string/have_account_text"
                    android:textColor="@color/colorDarkAsh"
                    android:gravity="end">

                </TextView>
                <TextView
                    android:clickable="true"
                    android:id="@+id/textRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:textColor="@color/colorDarkAsh">

                </TextView>
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>